--- a/style.css
+++ b/style.css
@@ -1,7 +1,61 @@
+html, body {
+    padding: 0;
+    margin: 0;
+}
+
 .navbar {
-    background-color: #2bb7fc;
+    background-color: #212F3C;
 }
 
 #temp {
     padding: 100px;
+}
+
+#backgroundPic {
+    background-image: url(images/clouds.jpg);
+    background-size: cover;
+    height: 100vh;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+}
+#backgroundPic h1 {
+    color: #212F3C;
+    font-size: 5em;
+    font-weight: 900;
+    margin-top: 200px;;
+    margin-bottom: 300px;
+}
+#backgroundPic h2 {
+    color: #212F3C;
+    font-size: 4em;
+}
+
+#topLineSpan {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 120px;
+    margin-bottom: 200px;
+
+    font-size: 5em;
+    font-weight: 900;
+}
+
+#paddingText {
+    padding-left: 8%;
+}
+
+#moreButton {
+    margin-top: 250px;
+    height: 45px;
+    width: 130px;
+}
+#secretButton {
+    margin-top: 250px;
+    height: 45px;
+    width: 350px;
+    display: none;
 }
